--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-  background-color: black;
+  background-color: #AB1B1B;
 }
 
 #game-canvas {
@@ -35,10 +35,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid black;
+  border: 1px solid #AB1B1B;
 }
 #background .background-square .background-square-content {
-  background-color: red;
+  background-color: black;
   width: 100%;
   height: 100%;
 }
